# digital_twin

./: README.md
model/: CMakeLists.txt  README.md  frames_2024-12-08_22.48.01.gv
model/description/: gz_control.xacro
model/launch/: batmobile_rviz.launch.py  model_motor.launch.py
nodes/: package.xml  setup.py
robogardener/: CMakeLists.txt  package.xml  setup.py  state_publisher.py
robogardener/config/: control.yaml  nav2_params.yaml  rviz_config.rviz
robogardener/description/: core.xacro  gz_control.xacro  materials.xacro  pantograph.xacro  robo.urdf.xacro  ros2_control.xacro  temp.urdf
robogardener/examples/: state_publisher_node.py
robogardener/launch/: robogardener.py
robogardener/worlds/: empty.sdf
